--- a/docs/openAPI/openapi/chat.yaml
+++ b/docs/openAPI/openapi/chat.yaml
@@ -127,6 +127,110 @@ paths:
           description: User not found
       tags:
         - Users
+  /users/{userId}/conversations/search:
+    get:
+      summary: Search conversation by name or id of recipient 
+      servers:
+        - url: http://localhost:9040
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+            example: "user123"
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 20
+        - name: offset
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 0
+        - name: name
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: recipientId
+          in: query
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: List of conversations
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  items:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                          example: "conv123"
+                        organization:
+                          type: object
+                          properties:
+                            id:
+                              type: string
+                              example: "org456"
+                            name:
+                              type: string
+                              example: "Organization 1"
+                            avatar:
+                              type: string
+                              example: "https://example.com/avatar.png"  
+                        member:
+                          type: object
+                          properties:
+                            id:
+                              type: string
+                              example: "member321"
+                            name:
+                              type: string
+                              example: "John Doe"
+                            avatar:
+                              type: string
+                              example: "https://example.com/member_avatar.png"
+                        lastMessage:
+                          type: object
+                          properties:
+                            content:
+                              type: string
+                              example: "Hello, can I get more information about your events?"
+                            senderId:
+                              type: string
+                              example: "user123"
+                            timestamp:
+                              type: string
+                              format: date-time
+                        unreadCount:
+                          type: integer
+                          example: 5
+                  limit:
+                    type: integer
+                    example: 20
+                  offset:
+                    type: integer
+                    example: 0
+                  hasMore:
+                    type: boolean
+                    example: false
+        '400':
+          description: Bad Request
+        '404':
+          description: User not found
+        
+
   /users/{userId}/conversations/{conversationId}:
     get:
       summary: Get specific conversation of a user by ID
