--- a/services/payments/docker-compose.yaml
+++ b/services/payments/docker-compose.yaml
@@ -22,11 +22,16 @@ services:
       rabbitmq:
         condition: service_healthy
 
+  # PRIMARY NODE
   mongo-payments:
     image: mongo
+    command: ["--replSet", "rs0", "--bind_ip_all"]
     restart: unless-stopped
     networks:
       - payments-network
+    volumes:
+      - mongo-payments-data:/data/db
+      - ./services/payments/init-replica-set.sh:/docker-entrypoint-initdb.d/init-replica-set.sh:ro
     healthcheck:
       test: [ 'CMD', 'mongosh', '--quiet', '--eval', 'db.runCommand({ ping: 1 }).ok' ]
       interval: 2s
@@ -34,8 +39,40 @@ services:
       retries: 10
       start_period: 30s
 
+  # TODO: test multi-node replica set
+  # SECONDARY NODE 1 (optional - uncomment for 3-node replica set)
+  # mongo-payments-2:
+  #   image: mongo
+  #   command: ["--replSet", "rs0", "--bind_ip_all"]
+  #   restart: unless-stopped
+  #   networks:
+  #     - payments-network
+  #   healthcheck:
+  #     test: [ 'CMD', 'mongosh', '--quiet', '--eval', 'db.runCommand({ ping: 1 }).ok' ]
+  #     interval: 2s
+  #     timeout: 3s
+  #     retries: 10
+  #     start_period: 30s
+
+  # SECONDARY NODE 2 (optional - uncomment for 3-node replica set)
+  # mongo-payments-3:
+  #   image: mongo
+  #   command: ["--replSet", "rs0", "--bind_ip_all"]
+  #   restart: unless-stopped
+  #   networks:
+  #     - payments-network
+  #   healthcheck:
+  #     test: [ 'CMD', 'mongosh', '--quiet', '--eval', 'db.runCommand({ ping: 1 }).ok' ]
+  #     interval: 2s
+  #     timeout: 3s
+  #     retries: 10
+  #     start_period: 30s
+
 networks:
   eventonight-network:
     driver: bridge
   payments-network:
     driver: bridge
+
+volumes:
+  mongo-payments-data:
