chore(stripe): setup env variables

--- a/.env.template
+++ b/.env.template
@@ -27,3 +27,6 @@ CHAT_SERVICE_PORT=9040
 MONGO_EXPRESS_CHAT_PORT=9041
 PAYMENTS_SERVICE_PORT=9050
 MONGO_EXPRESS_PAYMENTS_PORT=9051
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
