--- a/services/payments/package.json
+++ b/services/payments/package.json
@@ -32,6 +32,7 @@
     "amqplib": "^0.10.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "dotenv": "^17.2.3",
     "mongoose": "^8.20.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
