--- a/services/payments/package.json
+++ b/services/payments/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "start-dev": "NODE_ENV=development npm run start",
+    "start-dev:dev": "NODE_ENV=development npm run start:dev",
+    "start-debug": "nest start --debug",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
