--- a/services/payments/package.json
+++ b/services/payments/package.json
@@ -39,7 +39,8 @@
     "mongoose": "^8.20.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "stripe": "^20.1.2"
+    "stripe": "^20.1.2",
+    "currency-codes":"2.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
