docs(openAPI): update search chat documentations

--- a/docs/openAPI/openapi/chat.yaml
+++ b/docs/openAPI/openapi/chat.yaml
@@ -232,6 +232,8 @@ paths:
           description: Bad Request
         '404':
           description: User not found
+      tags:
+        - Users
         
 
   /users/{userId}/conversations/{conversationId}:
