fix(chat-service): fix minor bugs after copilot review

--- a/docs/openAPI/openapi/chat.yaml
+++ b/docs/openAPI/openapi/chat.yaml
@@ -99,6 +99,7 @@ paths:
                               example: "https://example.com/member_avatar.png"
                         lastMessage:
                           type: object
+                          nullable: true
                           properties:
                             content:
                               type: string
