chore(search-result): optimize build of search results

--- a/docs/openAPI/openapi/chat.yaml
+++ b/docs/openAPI/openapi/chat.yaml
@@ -180,6 +180,7 @@ paths:
                       properties:
                         id:
                           type: string
+                          nullable: true
                           example: "conv123"
                         organization:
                           type: object
