--- a/services/users/docker-compose.yaml
+++ b/services/users/docker-compose.yaml
@@ -26,6 +26,8 @@ services:
         condition: service_healthy
       keycloak-provision:
         condition: service_completed_successfully
+      media:
+        condition: service_healthy
 
   mongo-users:
     image: mongo
