fix(media-service): add healthcheck in media service

--- a/services/media/docker-compose.yaml
+++ b/services/media/docker-compose.yaml
@@ -14,6 +14,12 @@ services:
       - "traefik.http.routers.media.rule=Host(`media.${HOST}`)"
       - "traefik.http.routers.media.entrypoints=web"
       - "traefik.http.services.media.loadbalancer.server.port=9020"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9020/health"]
+      interval: 2s
+      timeout: 3s
+      retries: 100
+      start_period: 500s
     depends_on:
       - minio
 
