feat(auth): add authentication layer setup

--- a/services/payments/docker-compose.yaml
+++ b/services/payments/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       - MONGO_HOST=mongo-payments
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
       - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
+      - AUTH_PUBLIC_KEY_URL=http://users:${USERS_SERVICE_PORT}/public-keys
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.payments.rule=Host(`payments.${HOST}`)"
