--- a/services/payments/package.json
+++ b/services/payments/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.1.11",
     "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@types/amqplib": "^0.10.8",
     "@types/stripe": "^8.0.416",
@@ -38,6 +39,8 @@
     "currency-codes": "2.2.0",
     "dotenv": "^17.2.3",
     "mongoose": "^8.20.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
@@ -53,6 +56,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
     "@types/pdfkit": "^0.17.4",
     "@types/qrcode": "^1.5.6",
     "@types/supertest": "^6.0.2",
