--- a/services/payments/docker-compose.yaml
+++ b/services/payments/docker-compose.yaml
@@ -25,6 +25,8 @@ services:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+      users:
+        condition: service_healthy
 
   # PRIMARY NODE
   mongo-payments:
