--- a/services/users/docker-compose.yaml
+++ b/services/users/docker-compose.yaml
@@ -21,6 +21,12 @@ services:
       - "traefik.http.routers.users.entrypoints=web"
       - "traefik.http.services.users.loadbalancer.server.port=${USERS_SERVICE_PORT}"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:${USERS_SERVICE_PORT}/health"]
+      interval: 2s
+      timeout: 3s
+      retries: 100
+      start_period: 500s
     depends_on:
       mongo-users:
         condition: service_healthy
